--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/616/616408.png">
+  
   <link rel="stylesheet" href="css/styles.css">
 
   <script src="https://kit.fontawesome.com/f8d80e4171.js" crossorigin="anonymous"></script>
