--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>TinDog</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/616/616408.png">
-  
+
   <link rel="stylesheet" href="css/styles.css">
 
   <script src="https://kit.fontawesome.com/f8d80e4171.js" crossorigin="anonymous"></script>
@@ -35,20 +35,21 @@
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark ms-3">
       <a class="navbar-brand" id="brand" href="">Tindog</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button id="collapse-button" class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto me-3">
           <li class="nav-item">
-            <a class="nav-link" href="">Content</a>
+            <a class="nav-link collapse-link" href="">Content</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Pricing</a>
+            <a class="nav-link collapse-link" href="">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Download</a>
+            <a class="nav-link collapse-link" href="">Download</a>
           </li>
         </ul>
       </div>
@@ -56,16 +57,19 @@
 
 
     <!-- Title -->
-    <div class="container-fluid" id="padding">
+    <div class="container-fluid" id="title-container">
       <div class="row">
         <a href=""></a>
         <div class="col-lg-6">
           <h1 id="heading">Meet new and interesting dogs nearby.</h1>
-          <a type="button" class="btn btn-lg btn-dark" href="#">
-            <i class="fab fa-apple"></i> Download
+          <a type="button" class="btn btn-lg btn-dark button-download" href="#">
+            <i class="fab fa-apple button-download-icon"></i>
+            <i class="button-download-text">Download</i>
           </a>
-          <a href="" type="button" class="btn btn-lg btn-light">
-            <i class="fab fa-google-play"></i> Download</a>
+          <a href="" type="button" class="btn btn-lg btn-light button-download">
+            <i class="fab fa-google-play button-download-icon"></i>
+            <i class="button-download-text">Download</i>
+          </a>
         </div>
         <div class="col-lg-6">
           <img id="phoneImage" src="images/iphone6.png" alt="iphone-mockup">
@@ -81,21 +85,21 @@
     <div id="features-section" class="container">
       <div class="row">
         <div class="col-lg-4 col-md-12 col-sm-12">
-          <i id="tick" class="fas fa-check-circle"></i>
-          <h3>Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
+          <i class="fas fa-check-circle features-icon"></i>
+          <h3 class="features-text-h3">Easy to use.</h3>
+          <p class="features-text-p">So easy to use, even your dog could do it.</p>
         </div>
 
         <div class="col-lg-4 col-md-12 col-sm-12">
-          <i id="circle" class="far fa-dot-circle"></i>
-          <h3>Elite Clientele</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
+          <i class="far fa-dot-circle features-icon"></i>
+          <h3 class="features-text-h3">Elite Clientele</h3>
+          <p class="features-text-p">We have all the dogs, the greatest dogs.</p>
         </div>
 
         <div class="col-lg-4 col-md-12 col-sm-12">
-          <i id="heart" class="fas fa-heart"></i>
-          <h3>Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
+          <i class="fas fa-heart features-icon"></i>
+          <h3 class="features-text-h3">Guaranteed to work.</h3>
+          <p class="features-text-p">Find the love of your dog's life or your money back.</p>
         </div>
       </div>
     </div>
@@ -110,19 +114,21 @@
       <div class="carousel-inner">
 
         <div class="carousel-item active">
-          <h2 class="dogCom">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.
+          <h2 class="dogCom">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog.
+            Woof.
           </h2>
-          <img id="dogImage" src="images/dog-img.jpg" alt="dog-profile">
-          <em id="dogname">Pebbles, New York</em>
+          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <em class="testimonial-text">Pebbles, New York</em>
         </div>
 
         <div class="carousel-item">
-          <h2 class="dogCom" class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the
+          <h2 class="dogCom" class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found
+            the
             love of
             their
             life. I think.</h2>
-          <img id="ladyImage" class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-          <em id="ladyname">Beverly, Illinois</em>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em class="testimonial-text">Beverly, Illinois</em>
         </div>
 
       </div>
@@ -159,34 +165,18 @@
     <p id="pricing-P">Simple and affordable price plans for your and your dog.</p>
 
     <div class="row">
-      <div class="col-lg-4 col-md-6 col-sm-12 mt-md-3 mt-sm-3">
+      <div class="col-lg-4 col-md-12 col-sm-12 mt-md-3 mt-sm-3">
         <div class="card">
           <div class="card-header">
-            <h4>Chihuahua</h4>
+            <h4 class="card-heading">Chihuahua</h4>
           </div>
           <div class="card-body">
-            <h2 class="card-title">Free</h2>
-            <p class="card-text">10 Messages Per Day</p>
-            <p class="card-text">Unlimited App Usage</p>
-            <p class="card-text"> <s> Unlimited Matches </s></p>
-            <p class="card-text"><s>Pirority Listing</s></p>
-            <a href="#" class="btn btn-outline-primary d-md-block">Sign Up</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-4 col-md-6 col-sm-12 mt-md-3 mt-sm-3">
-        <div class="card">
-          <div class="card-header">
-            <h4>Labrador</h4>
-          </div>
-          <div class="card-body">
-            <h2 class="card-title">$49 / mo</h2>
-            <p class="card-text">10 Messages Per Day</p>
-            <p class="card-text">Unlimited App Usage</p>
-            <p class="card-text">Unlimited Matches</p>
-            <p class="card-text"><s>Pirority Listing</s></p>
-            <a href="#" class="btn btn-primary d-md-block">Sign Up</a>
+            <h2 class="card-title cardTitle">Free</h2>
+            <p class="card-text cardText">10 Messages Per Day</p>
+            <p class="card-text cardText">Unlimited App Usage</p>
+            <p class="card-text cardText"> <s> Unlimited Matches </s></p>
+            <p class="card-text cardText"><s>Pirority Listing</s></p>
+            <a href="#" id="cardButton1" class="btn btn-outline-primary d-md-block cardButton">Sign Up</a>
           </div>
         </div>
       </div>
@@ -194,15 +184,31 @@
       <div class="col-lg-4 col-md-12 col-sm-12 mt-md-3 mt-sm-3">
         <div class="card">
           <div class="card-header">
-            <h4>Mastiff</h4>
+            <h4 class="card-heading">Labrador</h4>
           </div>
           <div class="card-body">
-            <h2 class="card-title">$99 / mo</h2>
-            <p class="card-text">Unlimited Messages</p>
-            <p class="card-text">Unlimited App Usage</p>
-            <p class="card-text">Unlimited Matches</p>
-            <p class="card-text">Pirority Listing</p>
-            <a href="#" class="btn btn-primary d-md-block">Sign Up</a>
+            <h2 class="card-title cardTitle">$49 / mo</h2>
+            <p class="card-text cardText">10 Messages Per Day</p>
+            <p class="card-text cardText">Unlimited App Usage</p>
+            <p class="card-text cardText">Unlimited Matches</p>
+            <p class="card-text cardText"><s>Pirority Listing</s></p>
+            <a href="#" id="cardButton2" class="btn btn-primary d-md-block">Sign Up</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-12 col-sm-12 mt-md-3 mt-sm-3">
+        <div class="card">
+          <div class="card-header">
+            <h4 class="card-heading">Mastiff</h4>
+          </div>
+          <div class="card-body">
+            <h2 class="card-title cardTitle">$99 / mo</h2>
+            <p class="card-text cardText">Unlimited Messages</p>
+            <p class="card-text cardText">Unlimited App Usage</p>
+            <p class="card-text cardText">Unlimited Matches</p>
+            <p class="card-text cardText">Pirority Listing</p>
+            <a href="#" id="cardButton3" class="btn btn-primary d-md-block cardButton">Sign Up</a>
           </div>
         </div>
       </div>
@@ -216,12 +222,14 @@
   <section id="cta">
 
     <h3 id="lastText">Find the True Love of Your Dog's Life Today.</h3>
-    <a type="button" class="btn btn-lg btn-dark" href="#">
-      <i class="fab fa-apple"></i> Download
+    <a type="button" class="btn btn-lg btn-dark " href="#">
+      <i class="fab fa-apple"></i>
+      <i class="]">Download</i>
     </a>
-    <a href="" type="button" class="btn btn-lg btn-light">
-      <i class="fab fa-google-play"></i> Download</a>
-
+    <a href="" type="button" class="btn btn-lg btn-light ">
+      <i class="fab fa-google-play "></i>
+      <i class="]">Download</i>
+    </a>
   </section>
 
 
@@ -233,7 +241,7 @@
     <i class="social-icon fab fa-facebook"></i>
     <i class="social-icon fab fa-twitter-square"></i>
     <i class="social-icon fas fa-envelope"></i>
-    <p>© Copyright 2018 TinDog</p>
+    <p class="copyright">© Copyright 2018 TinDog</p>
 
   </footer>
 
