--- a/index.html
+++ b/index.html
@@ -222,13 +222,13 @@
   <section id="cta">
 
     <h3 id="lastText">Find the True Love of Your Dog's Life Today.</h3>
-    <a type="button" class="btn btn-lg btn-dark " href="#">
-      <i class="fab fa-apple"></i>
-      <i class="]">Download</i>
+    <a type="button" class="btn btn-lg btn-dark button-download" href="#">
+      <i class="fab fa-apple button-download-icon"></i>
+      <i class="button-download-text">Download</i>
     </a>
-    <a href="" type="button" class="btn btn-lg btn-light ">
-      <i class="fab fa-google-play "></i>
-      <i class="]">Download</i>
+    <a href="" type="button" class="btn btn-lg btn-light button-download">
+      <i class="fab fa-google-play button-download-icon"></i>
+      <i class="button-download-text">Download</i>
     </a>
   </section>
 
