--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto me-3">
           <li class="nav-item">
-            <a class="nav-link collapse-link" href="">Content</a>
+            <a class="nav-link collapse-link" href="#testimonials">Content</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link collapse-link" href="">Pricing</a>
+            <a class="nav-link collapse-link" href="#pricing">Pricing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link collapse-link" href="">Download</a>
+            <a class="nav-link collapse-link" href="#cta">Download</a>
           </li>
         </ul>
       </div>
@@ -59,14 +59,15 @@
     <!-- Title -->
     <div class="container-fluid" id="title-container">
       <div class="row">
-        <a href=""></a>
         <div class="col-lg-6">
           <h1 id="heading">Meet new and interesting dogs nearby.</h1>
-          <a type="button" class="btn btn-lg btn-dark button-download" href="#">
+          <a type="button" class="btn btn-lg btn-dark button-download"
+            href="https://apps.apple.com/us/app/tindog/id1476161526">
             <i class="fab fa-apple button-download-icon"></i>
             <i class="button-download-text">Download</i>
           </a>
-          <a href="" type="button" class="btn btn-lg btn-light button-download">
+          <a type="button" class="btn btn-lg btn-light button-download"
+            href="https://play.google.com/store/apps/details?id=com.tindog.tindog&hl=en_IN&gl=US">
             <i class="fab fa-google-play button-download-icon"></i>
             <i class="button-download-text">Download</i>
           </a>
@@ -176,7 +177,7 @@
             <p class="card-text cardText">Unlimited App Usage</p>
             <p class="card-text cardText"> <s> Unlimited Matches </s></p>
             <p class="card-text cardText"><s>Pirority Listing</s></p>
-            <a href="#" id="cardButton1" class="btn btn-outline-primary d-md-block cardButton">Sign Up</a>
+            <a id="cardButton1" class="btn btn-outline-primary d-md-block cardButton">Sign Up</a>
           </div>
         </div>
       </div>
@@ -192,7 +193,7 @@
             <p class="card-text cardText">Unlimited App Usage</p>
             <p class="card-text cardText">Unlimited Matches</p>
             <p class="card-text cardText"><s>Pirority Listing</s></p>
-            <a href="#" id="cardButton2" class="btn btn-primary d-md-block">Sign Up</a>
+            <a id="cardButton2" class="btn btn-primary d-md-block">Sign Up</a>
           </div>
         </div>
       </div>
@@ -208,7 +209,7 @@
             <p class="card-text cardText">Unlimited App Usage</p>
             <p class="card-text cardText">Unlimited Matches</p>
             <p class="card-text cardText">Pirority Listing</p>
-            <a href="#" id="cardButton3" class="btn btn-primary d-md-block cardButton">Sign Up</a>
+            <a id="cardButton3" class="btn btn-primary d-md-block cardButton">Sign Up</a>
           </div>
         </div>
       </div>
@@ -222,11 +223,13 @@
   <section id="cta">
 
     <h3 id="lastText">Find the True Love of Your Dog's Life Today.</h3>
-    <a type="button" class="btn btn-lg btn-dark button-download" href="#">
+    <a type="button" class="btn btn-lg btn-dark button-download"
+      href="https://apps.apple.com/us/app/tindog/id1476161526"> 
       <i class="fab fa-apple button-download-icon"></i>
       <i class="button-download-text">Download</i>
     </a>
-    <a href="" type="button" class="btn btn-lg btn-light button-download">
+    <a type="button" class="btn btn-lg btn-light button-download"
+      href="https://play.google.com/store/apps/details?id=com.tindog.tindog&hl=en_IN&gl=US">
       <i class="fab fa-google-play button-download-icon"></i>
       <i class="button-download-text">Download</i>
     </a>
